crates/analyzer/tests/snapshots/errors__invalid_struct_pub_qualifier.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: expected a field or function definition after `pub` or attributes
  ┌─ compile_errors/invalid_struct_pub_qualifier.fe:3:4
  │
3 │ pub}
  │    ^


